--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "author": {
         "name": "Vladimir K Urushev"
     },
-    "license": "SEE FILE LICENSE",
+    "license": "MIT",
     "engines": {
         "vscode": "^1.17.0"
     },
@@ -69,7 +69,12 @@
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
-        "lint": "tslint src/**/*.ts -t verbose"
+        "lint": "tslint src/**/*.ts -t verbose",
+        
+        "test": "npm run testSingleWorkspace && npm run testMultiWorkspace",
+
+        "testSingleWorkspace": "node ./out/test/standardTest.js",
+		"testMultiWorkspace": "node ./out/test/multiRootTest.js"
     },
     "dependencies": {
         "fs-extra": "^4.0.2",
@@ -78,7 +83,7 @@
         "rxjs": "^5.5.2",
         "tmp": "0.0.29",
         "untildify": "^3.0.2"
-    },
+    },    
     "devDependencies": {
         "typescript": "^2.6.2",
         "@types/node": "^7.0.43",
@@ -88,6 +93,7 @@
         "debounce": "^1.1.0",
         "tslint": "^5.7.0",
         "tslint-microsoft-contrib": "^5.0.1",
-        "vscode": "^1.1.5"
+        "vscode": "^1.1.5",
+        "@types/mocha": "^2.2.42"
     }
 }
