--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-importmagic",
     "displayName": "Importmagic",
     "description": "Python auto imports",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "icon": "images/icon.png",
     "publisher": "brainfit",
     "author": {
@@ -80,6 +80,9 @@
         "testSingleWorkspace": "node ./out/test/standardTest.js",
 		"testMultiWorkspace": "node ./out/test/multiRootTest.js"
     },
+    "extensionDependencies": [
+        "ms-python.python"
+    ],
     "dependencies": {
         "fs-extra": "^4.0.2",
         "lodash": "^4.17.4",
