--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "node_modules": true,
         ".vscode-test": true
     },
+    "editor.rulers": [79, 140],
     "search.exclude": {
         "out": true // set this to false to include "out" folder in search results
     },
